--- a/src/index.css
+++ b/src/index.css
@@ -51,12 +51,12 @@ canvas {
 
 
   .color-container {
-    @apply flex items-center justify-center px-4 py-4 rounded-full bg-gray-300 backdrop-blur
+    @apply flex items-center justify-center px-4 py-4 rounded-full bg-neutral-300 backdrop-blur
   }
 
 
   .size-btn-container {
-    @apply flex items-center justify-center p-1 rounded-full bg-gray-300 backdrop-blur ml-3 gap-1
+    @apply flex items-center justify-center p-1 rounded-full bg-neutral-300 backdrop-blur ml-3 gap-1
   }
 
 
@@ -71,7 +71,7 @@ canvas {
 
 
   .section-heading {
-    @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
+    @apply text-neutral-300 lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
   }
 
 
@@ -96,17 +96,17 @@ canvas {
 
 
   .link {
-    @apply text-blue hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20
+    @apply text-blue-400 hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20
   }
 
 
   .control-btn {
-    @apply ml-4 p-4 rounded-full bg-gray-300 backdrop-blur flex-center
+    @apply ml-4 p-4 rounded-full bg-neutral-900 backdrop-blur flex-center
   }
 
 
   .hero-title {
-    @apply text-center font-semibold text-3xl text-gray-100 opacity-0 max-md:mb-10
+    @apply text-center font-semibold text-3xl text-neutral-100 opacity-0 max-md:mb-10
   }
 
 
